@@ -164,4 +164,4 @@
    (setq *readtable* ytools-readtable*)
    (in-package :ytools))
 
-(defconstant +ytools-version+ "1.4.8.6")
+(defconstant +ytools-version+ "1.4.8.7")
