@@ -1,5 +1,8 @@
 $Id$
 	
+2004-11-07: Resurrected 'intercept' and 'pass' with improved type
+            checking. (Version 1.4.8.7)
+
 2004-10-30: Changed output for warning message in 'decipher-readtable'
             (slurp.lisp). (Version 1.4.8.6)
 
